# Design_patter

Factory/Abstract_Factory/: CMakeLists.txt  README.md  abstract_factory_model.cpp
Factory/Abstract_Factory/include/: factory.h  product.h
Factory/Abstract_Factory/src/: main.cpp
Factory/Factory/: CMakeLists.txt  README.md  factory.out  factory_model.cpp
Factory/Factory/include/: factory.h  product.h
Factory/Factory/src/: client.cpp
Factory/Simple_Factory/src/: 1.out  main.cpp
singleton/: CMakeLists.txt  README.md  Singleton_model.cpp
singleton/Sinleton/: Sinleton.sln
singleton/Sinleton/Sinleton/: Sinleton.vcxproj  Sinleton.vcxproj.filters  v1.1.h  v1.2.h  v1.3.h  v1.4.h  v1.5.h  v2.h  v3.h
singleton/src/: v1.1Singleton.cpp  v1.2Singleton.cpp  v1.3Singleton.cpp
